--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,11 @@
 html {
   scroll-behavior: smooth;
 }
+body {
+  font-family: "Kantumruy Pro", sans-serif !important;
+  font-optical-sizing: auto;
+  font-style: normal;
+}
 
 .h-screen-l {
     height: 100lvh;
