--- a/css/styles.css
+++ b/css/styles.css
@@ -14,6 +14,41 @@ body {
 .w-full {
     width: 100%;
 }
+.resizable-box {
+  width: 80%;
+  height: 50px;
+  overflow: hidden;
+}
+
+.guest {
+  font-size: clamp(16px, 5vw, 48px);
+  white-space: normal;
+  word-wrap: break-word;
+  max-width: 100%;
+  line-height: 1.2;
+  margin: 0;
+  color: #a57c52;
+}
+#popup-page,
+#scrollable-page {
+  opacity: 0;
+  display: none;
+  transition: opacity 0.3s ease-in-out;
+}
+
+#popup-page {
+  position: fixed;
+  top: 0; left: 0;
+  width: 100%;
+  height: 100%;
+  background: white;
+  justify-content: center;
+  align-items: center;
+  z-index: 999;
+}
+
+
+
 /* Add in your custom CSS */
 .custom-btn {
   background-color: transparent;
