--- a/css/styles.css
+++ b/css/styles.css
@@ -285,13 +285,15 @@ text {
 }
 
 .btn-audio {
-            width: 50px;
-          height: 50px;
-          border: 2px solid #C7A754;
-          background-color: white;
-          position: fixed;
-          bottom: 1rem;
-          right: 1rem;
-          z-index: 1050;
-          transition: background-color 0.3s ease;
+ width: 50px;
+  height: 50px;
+  border: 2px solid #C7A754;
+  background-color: white;
+  position: fixed;
+  bottom: 1rem;
+  right: 1rem;
+  z-index: 1050;
+}
+#audioToggle {
+  transition: opacity 0.3s ease;
 }
