--- a/css/styles.css
+++ b/css/styles.css
@@ -40,6 +40,28 @@ video {
   font-size: .9rem
 }
 
+.bg-image {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../images/bg_page1.webp") center/cover no-repeat;
+  z-index: -1;
+  /* stays behind your content */
+}
+
+.bg-image2 {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: url("../images/bg2.webp") center/cover no-repeat;
+  z-index: -1;
+  /* stays behind your content */
+}
+
 .resizable-box {
   width: 80%;
   height: 50px;
