--- a/css/styles.css
+++ b/css/styles.css
@@ -523,7 +523,14 @@ text {
 }
 
 #audioToggle {
-  width: 40px;
-  height: 40px;
-  /* reserve toggle space */
+  width: 48px;
+  height: 48px;
+  min-width: 48px;
+  min-height: 48px;
+}
+
+#audioToggle svg,
+#audioToggle i {
+  width: 24px;
+  height: 24px;
 }
