update og:iamge from png to jpeg, add width & height

--- a/css/styles.css
+++ b/css/styles.css
@@ -52,7 +52,8 @@ body {
   height: 100vh;
   background: url("../images/bg_page1.webp") center/cover no-repeat;
   z-index: -1;
-  /* stays behind your content */
+  aspect-ratio: 1200 / 938;
+  /* keeps ratio */
 }
 
 .bg-image2 {
@@ -525,9 +526,9 @@ text {
 #audioToggle {
   width: 48px;
   height: 48px;
-  min-width: 48px;
-  min-height: 48px;
+  flex-shrink: 0;
 }
+
 
 #audioToggle svg,
 #audioToggle i {
