--- a/css/styles.css
+++ b/css/styles.css
@@ -52,8 +52,7 @@ body {
   height: 100vh;
   background: url("../images/bg_page1.webp") center/cover no-repeat;
   z-index: -1;
-  aspect-ratio: 1200 / 938;
-  /* keeps ratio */
+  aspect-ratio: 16 / 9;
 }
 
 .bg-image2 {
@@ -63,8 +62,16 @@ body {
   height: 100%;
   background: url("../images/bg2.webp") center/cover no-repeat;
   z-index: -1;
-  /* stays behind your content */
+  aspect-ratio: 16 / 9;
 }
+
+.responsive-img {
+  max-width: 100%;
+  height: auto;
+  aspect-ratio: 2 / 1;
+  /* matches width/height attributes */
+}
+
 
 .hero-logo {
   position: absolute;
