--- a/css/styles.css
+++ b/css/styles.css
@@ -46,23 +46,22 @@ body {
 }
 
 .bg-image {
-  max-width: 1200px;
-  position: fixed;
   width: 100%;
+  /* responsive */
+  aspect-ratio: 1200 / 938;
+  position: fixed;
   height: 100vh;
   background: url("../images/bg_page1.webp") center/cover no-repeat;
   z-index: -1;
-  aspect-ratio: 16 / 9;
 }
 
 .bg-image2 {
-  max-width: 1200px;
   position: fixed;
   width: 100%;
-  height: 100%;
+  /* responsive */
+  aspect-ratio: 1200 / 938;
   background: url("../images/bg2.webp") center/cover no-repeat;
   z-index: -1;
-  aspect-ratio: 16 / 9;
 }
 
 .responsive-img {
@@ -83,8 +82,7 @@ body {
 }
 
 .hero-logo img {
-  max-width: 1200px;
-  width: 100%;
+  aspect-ratio: 10/1, ;
   height: auto;
 }
 
